[package]
name = "curly-succotash"
version = "0.1.0"
authors = ["Killian.Lemaitre"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.26"
#nvg = "0.5.11"
#nvg-gl = "0.5.4"
nvg = { path = "../nvg" }
nvg-gl = { path = "../nvg/nvg-gl" }
image = "0.23.14"

